Fixed the CSS
I have now fixed the CSS, and the look of the log is quite decent.. Many improvements can still be made, but this version should be able to be used in many instances.

the cancel button still does not work, but I haven't looked at it yet.. Next goal will be to include options for positioning of the log

r your changes. Lines starting

--- a/themes/feedback.test.css
+++ b/themes/feedback.test.css
@@ -66,21 +66,25 @@ body {
 	border: 1px solid #018D3A;
 }
 
-.feedback-image-button, 
-.feedback-image-button:hover, 
-.feedback-image-button:focus,
-.feedback-image-button:active,
-.feedback-image-button:visited  {
+.feedback-cancel, 
+.feedback-cancel:hover,
+.feedback-cancel:focus,
+.feedback-cancel:active,
+.feedback-cancel:visited {
 	padding: none;
-	border-style: none;
 	outline: none;
+	border-style: none;
 	margin: none;
 	box-shadow: none;
-	font-style: none;
-	background-color: transparent;
-	color: transparent;
-	width: 65px;
-	height: 65px;
+	font-style: inherit;
+	background-color: inherit;
+}
+
+.feedback-cancel {
+	float: left;
+	color: #999;
+	height: 20px;
+	margin-left: 2%;
 }
 
 .feedback-close, 
@@ -107,27 +111,23 @@ body {
 	color: #000;
 }
 
-.feedback-cancel, 
-.feedback-cancel:hover,
-.feedback-cancel:focus,
-.feedback-cancel:active,
-.feedback-cancel:visited {
+.feedback-image-button, 
+.feedback-image-button:hover, 
+.feedback-image-button:focus,
+.feedback-image-button:active,
+.feedback-image-button:visited  {
 	padding: none;
-	outline: none;
 	border-style: none;
+	outline: none;
 	margin: none;
 	box-shadow: none;
-	font-style: inherit;
-	background-color: inherit;
+	font-style: none;
+	background-color: transparent;
+	color: transparent;
+	width: 65px;
+	height: 65px;
 }
 
-.feedback-cancel {
-	float: left;
-	color: #999;
-	height: 20px;
-	margin-left: 2%;
-	vertical-align: center;
-}
 
 .feedback-log {
 	position: fixed;
@@ -157,29 +157,51 @@ body {
 	opacity: 1;
 }
 
-#feedback-log-top {
-
-	display: block;
-
-}
-#feedback-log-bottom {
-	margin-top: 10%;
-	display: block;
-}
-
-
-
 .feedback-log-hidden {
 	bottom: -300px;
 	opacity: 0;
+}
+
+.feedback-ok {
+	height: 30px;
+	width: 40px;
+	font-style: inherit;
+	float: right;
+	color:#fff;
+	margin-right: 2%;
+	border-radius: 2px;
+	background-color: #2FAD6A;
+	border: 1px solid #018D3A;
 }
 
 .feedback-text {
 	border: 1px solid #CCC;
 	border-radius: 4px;
 	width: 95%;
+	margin-top: 5px;
+	margin-bottom: 5px;
 }
 
+.detail-question {
+	margin-bottom: 5px;
+}
+.detail-question p{
+	margin: 5px;
+}
+
+.feedback-log-content-show {
+	opacity: 1;
+	-webkit-transition: all 0.6s ease-in;
+       -moz-transition: all 0.6s ease-in;
+        -ms-transition: all 0.6s ease-in;
+         -o-transition: all 0.6s ease-in;
+            transition: all 0.6s ease-in;
+}
+
+.feedback-log-content-hide {
+	opacity: 0;
+
+}
 
 /*
  	--------------------------------------- ID SELECTORS ------------------------------------
@@ -210,6 +232,15 @@ body {
 #feedback-neutral:hover {
 	background: url(../images/feedback_yellow_hover.svg)no-repeat center;
 	background-size: 80px 80px;
+}
+
+#feedback-log-top {
+	display: block;
+	height: 5%;
+
+}
+#feedback-log-bottom {
+	display: block;
 }
 
 /*
